--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
 <body>
-	<p>
-	    lorem sddssddsd <i>amet</i> cdcdcd
-	</p>
-</body> 
+	<b>HTML-документ</b> это обычный текстовый документ, может быть создан как в обычном текстовом редакторе
+	(Блокнот), так и в специализированном, с подсветкой кода (Notepad++, Visual Studio Code и т.п.). HTML-документ
+	имеет расширение .html.
+	<b>HTML-документ</b> состоит из дерева HTML-элементов и текста. Каждый элемент обозначается в исходном
+	документе начальным (открывающим) и конечным (закрывающим) тегом (за редким исключением).
+	Егоров Егор Николаевич 28.10.2022
+</body>
+</html>
